Bug 76824 - EDITING: Search&Replace: Search Results Window incorrectly filled in if sheet name contains a dot
Summary: EDITING: Search&Replace: Search Results Window incorrectly filled in if sheet...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: Other Windows (All)
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: BSA target:4.3.0 target:4.2.5
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-31 09:02 UTC by Marc PHILIPPE
Modified: 2014-05-26 22:39 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
ods file + 2 screenshots (252.92 KB, application/zip)
2014-03-31 09:02 UTC, Marc PHILIPPE
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marc PHILIPPE 2014-03-31 09:02:22 UTC
Created attachment 96644 [details]
ods file + 2 screenshots

Problem description: 

Steps to reproduce:
1. Give the current a sheet a name containing a dot, like "mask_main.bmp".
2. Call the Search&Replace window and perform the replacement by clicking on the "Replace all" button.

Current behavior:
Content of the columns in the Search Results Window:
Column Sheet   : 'mask_main
Column Cell    : .bmp'
Column Content : <cell reference>

Expected behavior:
Content of the columns in the Search Results Window:
Column Sheet   : mask_main.bmp
Column Cell    : <cell reference>
Column Content : <content>

Operating System: Windows 7
Version: 4.2.1.1 release
Comment 1 m_a_riosv 2014-03-31 20:59:33 UTC
Hi Marc, thanks for reporting.

Reproducible with:
Win7x64Ultimate
Version: 4.2.0.4 Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71
Version: 4.3.0.0.alpha0+ Build ID: b6a43bcbbf9e9a5655fd36fd4c8ef72d585f67b0
   TinderBox: Win-x86@39, Branch:master, Time: 2014-03-30_06:16:21
Comment 2 kifcaliph 2014-04-08 15:43:24 UTC
the problem is also in version 4.2.2
Comment 3 Kohei Yoshida 2014-05-12 02:05:06 UTC
For some reason the search result window never comes up for me, using the master build.
Comment 4 Kohei Yoshida 2014-05-23 15:46:07 UTC
(In reply to comment #3)
> For some reason the search result window never comes up for me, using the
> master build.

I just fixed that bug with Bug 79011.  Now I'm on this one.
Comment 5 Commit Notification 2014-05-23 16:56:16 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=653e4adddfc80aeb91c1d21c18e95b3986c85c54

fdo#76824: Proper way to parse cell address strings.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2014-05-23 16:57:48 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=622a869be5ae7a23dee39101531b26b9353cfee8&h=libreoffice-4-3

fdo#76824: Proper way to parse cell address strings.


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Kohei Yoshida 2014-05-23 16:58:25 UTC
4.2 backport: https://gerrit.libreoffice.org/9454
Comment 8 Commit Notification 2014-05-23 20:58:36 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=860e8915ff22b610985845b88f5293629f24250a&h=libreoffice-4-2

fdo#76824: Proper way to parse cell address strings.


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Kohei Yoshida 2014-05-23 21:23:50 UTC
Fixed in 4.2.
Comment 10 m_a_riosv 2014-05-26 22:39:23 UTC
Thanks Kohei.
Verified.
Win7x64
Version: 4.2.5.0.0+ Build ID: 585077d4f681582386baa10acff53abdd280552b
   TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-05-25_19:53:59
Version: 4.4.0.0.alpha0+ Build ID: dc91ebed1a3b0ef900b1bb5cf203c6a9aeb83016
   TinderBox: Win-x86@39, Branch:master, Time: 2014-05-26_01:36:09


Please Kohei could you retry, with:
Version: 4.3.0.0.beta1 Build ID: 2e39c7e59c8fc8b16a54c3d981dceef27fb0c07f
the issue in comment#3 remains for me, the window is only visible like a flash, without enough time to see any content.