fdo#76824: Proper way to parse cell address strings.

Be aware of the variable address convention.

Change-Id: I37ca38758f055e7799cadefafda61174ea3cbf9c
(cherry picked from commit 653e4adddfc80aeb91c1d21c18e95b3986c85c54)